--- a/runway.yml
+++ b/runway.yml
@@ -2,6 +2,6 @@ python: 3.6
 entrypoint: python runway_model.py
 cuda: 10.0
 build_steps:
-    - pip install runway-python opencv-python
+    - pip install runway-python opencv-python scipy
     - if_cpu: pip install tensorflow
     - if_gpu: pip install tensorflow-gpu
