--- a/runway.yml
+++ b/runway.yml
@@ -3,5 +3,5 @@ entrypoint: python runway_model.py
 cuda: 10.0
 build_steps:
     - pip install -r requirements.txt
-    - if_cpu: pip install tensorflow
-    - if_gpu: pip install tensorflow-gpu
+    - if_cpu: pip install tensorflow==1.15.0
+    - if_gpu: pip install tensorflow-gpu==1.15.0
